--- a/views/createCombo.hbs
+++ b/views/createCombo.hbs
@@ -27,9 +27,9 @@
     </div>
 
     <div class="mt-4 mb-3 text-center">
-        <button id="cancelar-btn" class="btn btn-danger">Cancelar</button>
-        <button id="agregar-items-btn" class="btn btn-primary ms-2">Agregar Items</button>
-        <button id="guardar-btn" class="btn btn-success ms-2">Guardar</button>
+        <button id="cancelar-btn" class="btn btn-danger"> <img src="/icons/cancelar.png" alt=""> Cancelar</button>
+        <button id="agregar-items-btn" class="btn btn-success ms-2">Agregar Items</button>
+        <button id="guardar-btn" class="btn btn-primary ms-2"> <img src="/icons/guardar-el-archivo.png" alt=""> Guardar</button>
     </div>
 </div>
 
@@ -200,5 +200,4 @@
         margin-left: 500px;
     }
 </style>
-
 {{>footer}}
