--- a/views/newProduct.hbs
+++ b/views/newProduct.hbs
@@ -1,6 +1,6 @@
 {{>header}}
-<div class="container">
-    <h1>Nuevo Producto</h1>
+<div class="container" id="new-products">
+    <h1 id="title-new-products">Nuevo Producto</h1>
     <form action="/products" method="POST">
         <div class="form-group">
             <label for="cod_barra">Código de Barras:</label>
@@ -22,9 +22,9 @@
             <label for="precio_venta">Precio de Venta:</label>
             <input type="number" class="form-control" id="precio_venta" name="precio_venta" required>
         </div>
-        <div class="mt-3 text-center">
-            <button type="submit" class="btn btn-primary">Guardar</button>
-            <button type="button" class="btn btn-danger" id="cancel-btn">Cancelar</button>
+        <div class="mt-3 text-center mt-5">
+            <button type="submit" class="btn btn-primary"> <img src="/icons/guardar-el-archivo.png" alt=""> Guardar</button>
+            <button type="button" class="btn btn-danger" id="cancel-btn"> <img src="/icons/cancelar.png" alt=""> Cancelar</button>
         </div>
     </form>
 </div>
