--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,20 +1,19 @@
-<div class="fixed-bottom">
 
-    <h1>Hola soy Footer</h1>
+<div class="container" style="height: 3vh;" id="footer-init">    
+        <!-- Footer -->
+        <div class="row" id="footer-burger">
+            <!-- Grid container -->
+            <div id="burger-title">
+                <p>Hamburgueseria Ariel</p>
+            </div>
+
+            <div>
+                © 2024 Todos los Derechos reservados Javier Lamarque
+            </div>
+        </div>
+    
 
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -22,6 +21,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"></script>
+
 </body>
+
 
 </html>
