--- a/views/products.hbs
+++ b/views/products.hbs
@@ -1,7 +1,7 @@
 {{> header}}
 
-<div class="container">
-    <h1 class="text-center">Listado de Productos</h1>
+<div class="container" id="products">
+    <h1 class="text-center mt-5">Listado de Productos</h1>
     <div class="row mb-3 justify-content-center mt-5">
         <div class="col-md-4">
             <input type="text" id="searchInput" class="form-control" placeholder="Buscar producto por descripción">
@@ -44,7 +44,7 @@
 <a href="/newProduct" class="btn btn-success">Crear Nuevo Producto</a>
 <div>
     <a href="/sales" class="btn btn-success">Ir a Ventas</a>
-    <a href="/admin/home" class="btn btn-danger">Cancelar</a>
+    <a href="/admin/home" class="btn btn-danger"> <img src="/icons/cancelar.png" alt=""> Cancelar</a>
 </div>
 <script>
     async function deleteProduct(codigoDeBarras) {
@@ -103,4 +103,4 @@
     });
 </script>
 
-{{> footer}}
+{{>footer}}
