--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,6 +1,6 @@
 {{> header}}
 
-<div class="container d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+<div class="container d-flex justify-content-center align-items-center mt-5">
     <div class="col-md-6">
         <h1 class="text-center">Registro de Usuario</h1>
         <form id="registerForm" action="/register" method="POST">
@@ -20,9 +20,9 @@
                 <input class="form-check-input" type="checkbox" id="admin" name="role" value="admin">
                 <label class="form-check-label" for="admin">Es Administrador</label>
             </div>
-            <button type="submit" class="btn btn-primary mt-3">Registrar Usuario</button>
+            <button type="submit" class="btn btn-primary mt-3"> <img src="/icons/guardar-el-archivo.png" alt=""> Guardar Cambios</button>
         </form>
-        <button type="button" class="btn btn-danger mt-3" id="cancel-btn">Cancelar</button>
+        <button type="button" class="btn btn-danger mt-3" id="cancel-btn"> <img src="/icons/cancelar.png" alt=""> Cancelar</button>
     </div>
 </div>
 
@@ -40,4 +40,6 @@
         });
     });
 </script>
-{{> footer}}
+
+
+{{>footer}}
