--- a/views/users.hbs
+++ b/views/users.hbs
@@ -1,6 +1,6 @@
 {{> header}}
 
-<div class="container">
+<div class="container mt-5 text-center">
     <h1>Usuarios Registrados</h1>
     <table class="table">
         <thead>
@@ -26,7 +26,7 @@
         </tbody>
     </table>
 </div>
-<button type="button" class="btn btn-danger" id="cancel-btn">Cancelar</button>
+<button type="button" class="btn btn-danger" id="cancel-btn"> <img src="/icons/cancelar.png" alt=""> Cancelar</button>
 
 <script>
     document.getElementById('cancel-btn').addEventListener('click', function () {
@@ -60,67 +60,3 @@
 </script>
 
 {{> footer}}
-
-
-
-
-
-
-{{!-- {{> header}}
-
-<div class="container">
-    <h1>Usuarios Registrados</h1>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Username</th>
-                <th>Password</th>
-                <th>Accion</th>
-            </tr>
-        </thead>
-        <tbody>
-            {{#each users}}
-            <tr id="user-{{this._id}}">
-                <td>{{this.username}}</td>
-                <td>{{this.password}}</td>
-                <td>
-                    <button onclick="deleteUser('{{this._id}}')" class="btn btn-danger">Eliminar</button>
-                </td>
-            </tr>
-            {{/each}}
-        </tbody>
-    </table>
-</div>
-    <button type="button" class="btn btn-danger" id="cancel-btn">Cancelar</button>
-
-
-<script>
-    document.getElementById('cancel-btn').addEventListener('click', function () {
-        window.history.back();
-    });
-</script>
-
-{{> footer}}
-
-<script>
-    async function deleteUser(userId) {
-        if (confirm('¿Estás seguro de que deseas eliminar este usuario?')) {
-            try {
-                const response = await fetch(`/users/${userId}`, {
-                    method: 'DELETE',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    }
-                });
-                if (response.ok) {
-                    document.getElementById(`user-${userId}`).remove();
-                } else {
-                    alert('Error al eliminar el usuario');
-                }
-            } catch (error) {
-                console.error('Error:', error);
-                alert('Error al eliminar el usuario');
-            }
-        }
-    }
-</script> --}}
