--- a/views/reportes.hbs
+++ b/views/reportes.hbs
@@ -27,6 +27,10 @@
     </div>
 
     <div class="text-center">
+        <!-- Botón para exportar a Excel -->
+        <a href="/exportar-excel" class="btn btn-success">
+            <img src="/icons/excel.png" alt=""> Exportar a Excel
+        </a>
         <a href="/admin/home" class="btn btn-danger">
             <img src="/icons/cancelar.png" alt=""> Cancelar
         </a>
