--- a/views/sales.hbs
+++ b/views/sales.hbs
@@ -23,7 +23,7 @@
             <div class="col-sm-4">
                 <select class="form-control" id="pago" name="pago" required>
                     <option value="Efectivo">Efectivo</option>
-                    <option value="Mercado Pago">Mercado Pago</option>
+                    <option value="Mercado Pago" disabled>Mercado Pago</option>
                 </select>
             </div>
 
