--- a/views/viewSales.hbs
+++ b/views/viewSales.hbs
@@ -44,7 +44,7 @@
 
     <div class="volver" id="pie-view-sales">
         <a href="/sales" class="btn btn-primary">Ir a Ventas</a>
-        <a href="/admin/home" class="btn btn-warning">Ir a Inicio</a>
+        <a href="/admin/home" class="btn btn-danger">Cancelar</a>
     </div>
 </div>
 
