--- a/views/reportes.hbs
+++ b/views/reportes.hbs
@@ -30,8 +30,8 @@
         <a href="/exportar-excel" class="btn btn-success">
             <img src="/icons/excel.png" alt=""> Exportar a Excel
         </a>
-        <a href="/admin/home" class="btn btn-primary">
-            <img src="/icons/cancelar.png" alt=""> Volver
+        <a href="/admin/home" class="btn btn-danger">
+            <img src="/icons/cancelar.png" alt=""> Cancelar
         </a>
         <a href="/cerrar-reporte" class="btn btn-warning">
             <img src="/icons/excel.png" alt=""> Cerrar Reportes
