--- a/views/viewCombo.hbs
+++ b/views/viewCombo.hbs
@@ -1,5 +1,4 @@
 {{>header}}
-
 <div class="container">
     <h1 class="mt-5 text-center">Combos Creados</h1>
 
@@ -268,3 +267,5 @@
         });
     });
 </script>
+
+{{>footer}}
