--- a/views/caja.hbs
+++ b/views/caja.hbs
@@ -37,7 +37,7 @@
         </button>
 
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#retiroTransferenciaModal"
-            {{#unless (eq userRole 'admin' )}}disabled class="disabled" {{/unless}}> <img src="/icons/transferencia-movil.png" alt="">
+            {{#unless (eq userRole 'admin' )}}disabled class="disabled" {{/unless}} disabled> <img src="/icons/transferencia-movil.png" alt="">
             Retiro Parcial Transferencia
         </button>
 
